--- a/css/main.scss
+++ b/css/main.scss
@@ -8,5 +8,8 @@
 @import '../sass/components/icon';
 @import '../sass/layout/grid';
 @import '../sass/layout/navigation';
-@import'../sass/layout/login';
+@import '../sass/layout/login';
 @import'../sass/layout/dashboard.scss';
+@import "../sass/layout/compose.scss";
+@import "../sass/layout/user_profile_page.scss";
+@import '../sass/base/utilities.scss';
