--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,3 +5,158 @@ body{
     line-height: 1.7;
     color: $color-grey-dark;
 }
+
+.modal{
+    width: 40%;
+    margin: auto;
+    background: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    transform: translate(50%, 50%);
+    top:1%;
+    left:16%;
+    z-index: 10;
+    text-align: center;
+    height: 40vh;
+    border: 1px solid;
+
+
+
+
+    & p{
+        text-transform: uppercase;
+        color: black;
+        font-weight: 600;
+        font-size: 12px;
+        margin: auto;
+    }
+}
+
+.fa-check-double{
+    height: 30px;
+    font-size: 50px;
+    color: black;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+
+.close-modal{
+    transform: translateX(180px);
+    border: none;
+    background: none;
+    font-size: 50px;
+    margin: -20px 0 0 0 ;
+
+}
+
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.508);
+    backdrop-filter: blur(1px);
+} 
+
+.modal_back{
+    margin: 15vh 0 0 20vh;
+    display: block;
+
+    & a{
+        text-decoration: none;
+        color: green;
+       
+    }
+}
+
+.fa-undo{
+    color: green;
+}
+
+
+.hidden{
+    display: none;
+} 
+
+.skill_container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
+.title_content{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin: 20px;
+    margin-left: 200px;
+}
+
+.head{
+    font-size: 17px;
+    color: black;
+
+}
+
+#skill_content{
+    width: 70%;
+    outline: none;
+    padding: 5px;
+}
+
+#skill_content__body{
+    width: 70%;
+    outline: none;
+    height: 40vh;
+}
+
+
+.email_details{
+    margin: 20px;
+}
+
+.email__input{
+    width: 70%;
+    padding: 5px;
+    outline: none;
+}
+
+#email_content_body{
+    width: 70%;
+    height: 20vh;
+}
+
+
+.button {
+
+
+    & ul{
+
+        & li{
+            display: inline-block;
+            background-color: #28b34b;
+            border-radius: 5px;
+            margin: 10px;
+            color: #fff;
+            font-size: 10px;
+            padding: 5px 20px;
+        }
+    }
+}
+
+p{
+
+    & i{
+        font-size: 12px;
+        color: black;
+        font-weight: 600;
+    }
+}
+
+.category_wrapper{
+    margin: 50px;
+}
