--- a/sass/layout/dashboard.scss
+++ b/sass/layout/dashboard.scss
@@ -42,7 +42,7 @@
     & a{
         text-decoration: none;
         color: #fff;
-        background: rgb(34, 167, 16);
+        background: #28b34b;
         padding: 8px 40px;
         border-radius: 4px;
     }
@@ -58,6 +58,9 @@
     display: inline-block;
     padding:  0 10px 0 10px;
 }
+
+
+
 
 .notify{
     position: relative;
@@ -82,6 +85,10 @@
 
 
 }
+
+
+
+
 .inbox-stats-tag-head{
     border-top: 1px solid #e4e4e4;
 }
@@ -131,16 +138,16 @@
 }
 
 footer{
-    background: rgb(25, 155, 13);
+    background: #28b34b;
     padding: 15px;
-    border: 1px solid rgb(33, 33, 33);
+    // border: 1px solid rgb(33, 33, 33);
 
     & p{
         text-transform: uppercase;
         text-align: center;
         font-size: 1.5rem;
         letter-spacing: 3px;
-        color: $color-grey-dark-3;
+        color: grey;
 
     }
 }
@@ -284,7 +291,7 @@ footer{
 }
 
 #message-container{
-    height: 100%;
+    height: 87%;
 }
 
 #chat-message-list{
@@ -293,9 +300,8 @@ footer{
 }
 
 #chat-form{
-
-  width: 100%;
-  padding:  10px 10px 10px 10px;
+  width:100%;
+  padding: 10px 10px 10px 10px;
   text-align: center;
   background: #eee;
   margin-top: -14px;
