--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,145 @@ body {
   color: #777;
 }
 
+.modal {
+  width: 40%;
+  margin: auto;
+  background: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  position: absolute;
+  -webkit-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+  top: 1%;
+  left: 16%;
+  z-index: 10;
+  text-align: center;
+  height: 40vh;
+  border: 1px solid;
+}
+
+.modal p {
+  text-transform: uppercase;
+  color: black;
+  font-weight: 600;
+  font-size: 12px;
+  margin: auto;
+}
+
+.fa-check-double {
+  height: 30px;
+  font-size: 50px;
+  color: black;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.close-modal {
+  -webkit-transform: translateX(180px);
+          transform: translateX(180px);
+  border: none;
+  background: none;
+  font-size: 50px;
+  margin: -20px 0 0 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.508);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+}
+
+.modal_back {
+  margin: 15vh 0 0 20vh;
+  display: block;
+}
+
+.modal_back a {
+  text-decoration: none;
+  color: green;
+}
+
+.fa-undo {
+  color: green;
+}
+
+.hidden {
+  display: none;
+}
+
+.skill_container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.title_content {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+  margin: 20px;
+  margin-left: 200px;
+}
+
+.head {
+  font-size: 17px;
+  color: black;
+}
+
+#skill_content {
+  width: 70%;
+  outline: none;
+  padding: 5px;
+}
+
+#skill_content__body {
+  width: 70%;
+  outline: none;
+  height: 40vh;
+}
+
+.email_details {
+  margin: 20px;
+}
+
+.email__input {
+  width: 70%;
+  padding: 5px;
+  outline: none;
+}
+
+#email_content_body {
+  width: 70%;
+  height: 20vh;
+}
+
+.button ul li {
+  display: inline-block;
+  background-color: #28b34b;
+  border-radius: 5px;
+  margin: 10px;
+  color: #fff;
+  font-size: 10px;
+  padding: 5px 20px;
+}
+
+p i {
+  font-size: 12px;
+  color: black;
+  font-weight: 600;
+}
+
+.category_wrapper {
+  margin: 50px;
+}
+
 .u-center-text {
   text-align: center !important;
 }
@@ -84,6 +223,12 @@ body {
   font-size: 1.5rem;
 }
 
+.aside__item a{
+  text-decoration: none;
+  display: flex;
+  color: #333;
+}
+
 .aside__item.active {
   background-color: #bbfce3;
   border-left: 6px solid #00be4c;
@@ -96,6 +241,7 @@ body {
 .aside__link {
   text-decoration: none;
   color: #333;
+  margin: 5px;
 }
 
 .icon {
@@ -429,7 +575,7 @@ input[type="password"]::-ms-reveal {
 .inbox-stats__compose a {
   text-decoration: none;
   color: #fff;
-  background: #22a710;
+  background: #28b34b;
   padding: 8px 40px;
   border-radius: 4px;
 }
@@ -507,9 +653,8 @@ input[type="password"]::-ms-reveal {
 }
 
 footer {
-  background: #199b0d;
+  background: #28b34b;
   padding: 15px;
-  border: 1px solid #212121;
 }
 
 footer p {
@@ -517,7 +662,7 @@ footer p {
   text-align: center;
   font-size: 1.5rem;
   letter-spacing: 3px;
-  color: #333;
+  color: grey;
 }
 
 .user_search {
@@ -656,7 +801,7 @@ footer p {
 }
 
 #message-container {
-  height: 100%;
+  height: 87%;
 }
 
 #chat-message-list {
@@ -787,5 +932,808 @@ footer p {
   height: 50px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.inbox_compose_border {
+  border: 1px solid #c2c2c2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column: 1;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  height: 70vh;
+  margin: 10px 0 0 30px;
+  width: 100%;
+}
+
+.inbox_compose_header {
+  height: 20%;
+  margin: 20px 0 0 40px;
+  position: relative;
+}
+
+.inbox_compose_header input {
+  width: 90%;
+  padding: 5px;
+  margin: 5px;
+  outline: none;
+}
+
+.inbox_message-body {
+  margin-top: 20px;
+}
+
+.inbox_message-body input {
+  height: 20vh;
+}
+
+.inbox_message-body::-webkit-input-placeholder {
+  margin-top: -70px;
+}
+
+.inbox_message-body:-ms-input-placeholder {
+  margin-top: -70px;
+}
+
+.inbox_message-body::-ms-input-placeholder {
+  margin-top: -70px;
+}
+
+.inbox_message-body::placeholder {
+  margin-top: -70px;
+}
+
+.send_message {
+  margin: 20px 0 0 0;
+  position: absolute;
+  right: 6rem;
+}
+
+.send_message a {
+  text-decoration: none;
+  padding: 5px 40px;
+  background: #05b73d;
+  color: #fff;
+  border-radius: 3px;
+}
+
+.user_profile-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 3fr 1fr;
+      grid-template-columns: 1fr 3fr 1fr;
+  grid-gap: 10px;
+  height: 100vh;
+  padding: 50px 30px 20px 30px;
+}
+
+.user {
+  border: 1px solid;
+  padding: 10px 10px;
+  border-radius: 5px;
+}
+
+.user_details_container {
+  text-align: center;
+}
+
+.user_details_profile img {
+  width: 100px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  height: 100px;
+}
+
+.user_details_profile {
+  position: relative;
+}
+
+.user_details_image {
+  position: relative;
+}
+
+.verified_user {
+  position: absolute;
+  -webkit-transform: translateX(-19px);
+          transform: translateX(-19px);
+}
+
+.username {
+  font-weight: 600;
+}
+
+.user_options {
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateX(80px);
+          transform: translateX(80px);
+}
+
+.projects {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 1.3rem;
+  padding: 10px;
+  text-align: center;
+}
+
+.completed_project {
+  padding: 10px;
+  border-right: 1px solid;
+}
+
+.completed_project p {
+  font-size: 12px;
+}
+
+.posted_projects {
+  padding: 10px;
+}
+
+.decision {
+  display: inline-block;
+  margin: 20px 0 0 0;
+}
+
+.decision a {
+  text-decoration: none;
+  background: #28b34b;
+  border-radius: 3px;
+  font-size: 12px;
+}
+
+.btn {
+  padding: 5px 20px;
+  color: #fff;
+}
+
+.user_details {
+  border: 1px solid;
+}
+
+.user_message {
+  overflow: scroll;
+  border: 1px solid;
+}
+
+.user_message_head {
+  position: fixed;
+}
+
+#chat-message-list {
+  height: 90%;
+}
+
+#chat-form input {
+  width: 70%;
+}
+
+.user_wallet {
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.wallet-pay {
+  margin-bottom: 20px;
+  padding: 0 0 10px 15px;
+  font-size: 1.3rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wallet-pay a {
+  background: #28b34b;
+  padding: 5px 30px;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 3px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.wallet-pay input {
+  border: none;
+  border-bottom: 1px solid;
+  outline: none;
+  width: 7vw;
+}
+
+.wallet-head {
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: black;
+}
+
+.wallet-balance {
+  margin-bottom: 30px;
+}
+
+.wallet-withdraw {
+  margin-bottom: 30px;
+}
+
+#total-balance {
+  color: chartreuse;
+}
+
+.dollar-sign {
+  font-weight: 600;
+}
+
+.user_files_download {
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.user_contact_info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 60px;
+  padding: 20px;
+}
+
+.user_contact_info {
+  font-size: 1.2rem;
+  color: black;
+}
+
+.user_contact__head {
+  display: inline-block;
+  font-weight: 600;
+}
+
+.history {
+  padding: 1em;
+  color: #222;
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
+.history__header {
+  text-transform: capitalize;
+  font-weight: 400;
+  font-size: 1.8rem;
+  margin-bottom: 1.5rem;
+}
+
+.history__list {
+  list-style: none;
+  overflow: auto;
+  height: 30vh;
+}
+
+.history__item {
+  padding: 0 2rem;
+  font-size: 1.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  color: grey;
+}
+
+.history__item__date {
+  position: absolute;
+  left: 0;
+}
+
+.history__item__update {
+  position: absolute;
+  right: 0;
+}
+
+.history__item:not(:last-child) {
+  border-bottom: 1px solid #222;
+  margin-bottom: 3.5rem;
+}
+
+.history__date {
+  margin-right: auto;
+}
+
+.history__date {
+  position: absolute;
+  left: 0;
+}
+
+.user_files {
+  overflow: scroll;
+  height: 32vh;
+  margin: auto;
+  padding: 5px;
+  color: black;
+  font-size: 1.3rem;
+}
+
+.files {
+  margin: auto;
+  text-align: center;
+  border: 1px solid black;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+.download_head {
+  font-size: 2rem;
+  padding: 5px;
+  color: black;
+}
+
+.user_profile_dropdown {
+  position: absolute;
+  top: 9vh;
+  left: 10vw;
+}
+
+.user_profile_dropdown a li {
+  text-align: start;
+}
+
+#unpaid {
+  background-color: grey;
+  padding: 5px;
+  position: absolute;
+  top: 8px;
+  left: -12px;
+  border-radius: 5px;
+}
+
+.wallet__history li:hover {
+  opacity: 1.0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.inbox-stats_count {
+  font-size: 1.2rem;
+  border-top: none;
+}
+
+#total_balance {
+  color: #28b34b;
+}
+
+.bal {
+  border-bottom: 1px solid black;
+}
+
+.profile-height {
+  height: 20vh;
+}
+
+textarea::-webkit-input-placeholder {
+  margin-top: 200px;
+}
+
+textarea:-ms-input-placeholder {
+  margin-top: 200px;
+}
+
+textarea::-ms-input-placeholder {
+  margin-top: 200px;
+}
+
+textarea::placeholder {
+  margin-top: 200px;
+}
+
+.dispute_card__link {
+  display: block;
+}
+
+.reported_wrapper {
+  height: 90vh;
+  padding: 50px;
+  margin: auto;
+  width: 70%;
+  position: relative;
+}
+
+.dispute_container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  height: 100%;
+}
+
+.dispute_card {
+  height: 19vh;
+  position: relative;
+  border: 1px solid black;
+}
+
+.dispute_card_details {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  margin: 20px 30px;
+}
+
+.dispute_card_contents img {
+  border-radius: 50px;
+  height: 70px;
+  width: 70px;
+}
+
+.dispute_card_contents a {
+  text-decoration: none;
+}
+
+.remove_card {
+  position: relative;
+  height: 30px;
+}
+
+.remove_card__cancel {
+  position: absolute;
+  right: 0;
+  color: black;
+}
+
+.remove_card_time {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  color: black;
+  font-size: 12px;
+}
+
+.disputes_names p {
+  display: inline-block;
+  color: black;
+  font-weight: 600;
+}
+
+.pagination {
+  display: inline-block;
+  position: absolute;
+  right: 35px;
+  padding: 10px;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
+
+.dispute_inbox_container {
+  width: 80%;
+  margin: 50px auto;
+}
+
+.disputes_dropdown_container {
+  position: relative;
+}
+
+.modal_dropdown {
+  position: absolute;
+  right: 70%;
+  background: #fff;
+  width: 200px;
+  padding: 20px;
+  border: 1px solid black;
+  margin-top: -20px;
+  display: none;
+}
+
+.modal_dropdown.active {
+  display: block;
+}
+
+ul li {
+  list-style: none;
+  padding: 3px 5px;
+  cursor: pointer;
+}
+
+.modal_dropdown li:hover {
+  background: #4CAF50;
+  color: black;
+}
+
+ul {
+  position: relative;
+}
+
+ul li span {
+  position: absolute;
+  right: 0;
+}
+
+ul a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: black;
+}
+
+.dispute__dropdown {
+  font-size: 30px;
+  position: relative;
+  right: -7px;
+  top: -9px;
+}
+
+.disputes_names {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+#mydropdown {
+  display: none;
+}
+
+.dispute_button_dropdown {
+  cursor: pointer;
+}
+
+#chat-message-list {
+  height: 50vh;
+}
+
+#dispute_names {
+  font-weight: 900;
+  color: black;
+}
+
+.decisive ul a {
+  display: inline-block;
+  padding: 2px 10px;
+  background: #4CAF50;
+  color: #fff;
+  margin: auto;
+}
+
+.decisive ul {
+  text-align: center;
+  width: 50%;
+}
+
+.fa-exclamation-triangle {
+  font-size: 50px;
+}
+
+.users_graphs_container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  padding: 0 50px;
+  text-align: center;
+  -ms-grid-rows: 50px 50px;
+      grid-template-rows: 50px 50px;
+  margin-top: 30px;
+}
+
+.users_graph_row {
+  height: 50vh;
+  border: 1px solid black;
+  padding: 5px 10px;
+}
+
+.pie-chart {
+  background: radial-gradient(circle closest-side, white 0, white 30%, transparent 20%, transparent 60%, white 0), conic-gradient(#fa3d67 0, #fa3d67 35%, #5c5c5c 0, #5c5c5c 60%, #757575 0, #757575 75%, #b8b8b8 0, #b8b8b8 90%, #c7c7c7 0, #c7c7c7 100%);
+  position: relative;
+  min-height: 150px;
+  width: 100px;
+}
+
+.email-chart {
+  background: radial-gradient(circle closest-side, white 0, white 30%, transparent 20%, transparent 60%, white 0), conic-gradient(#fa3d67 0, #fa3d67 35%, #b8b8b8 0, #b8b8b8 90%, #c7c7c7 100%);
+}
+
+.pie-chart h2 {
+  position: absolute;
+  margin: 1rem;
+}
+
+.pie-chart figcaption {
+  position: absolute;
+  bottom: 1em;
+  right: 1em;
+  font-size: smaller;
+  text-align: right;
+}
+
+.pie-chart span:after {
+  display: inline-block;
+  content: "";
+  width: 0.8em;
+  height: 0.8em;
+  margin-left: 0.4em;
+  height: 0.8em;
+  border-radius: 0.2em;
+  background: currentColor;
+}
+
+figcaption {
+  position: absolute;
+  right: 10px;
+  top: 20px;
+}
+
+.see_full_chart {
+  background-color: #0fa140;
+  text-align: center;
+  padding: 9px 19px;
+  text-decoration: none;
+  color: #fff;
+  width: 20px;
+  border-radius: 3px;
+}
+
+.users_social__graphli {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.admin_users_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.stats_desh {
+  padding: 0 10px;
+  border: 1px solid black;
+  margin: 20px;
+}
+
+.statsitics_header {
+  font-size: 17px;
+  color: black;
+  border-bottom: 1px solid black;
+  margin: 0;
+  padding: 5px;
+}
+
+.admin_social_stats_box__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 16px;
+  border-bottom: 1px solid  black;
+  position: relative;
+}
+
+.admin_social_stats_box__list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0px;
+  padding: 10px !important;
+}
+
+#stats_follow {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 7vw;
+}
+
+#ctr {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  text-align: end;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.social_graph__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border-bottom: 1px solid black;
+  padding: 20px;
+}
+
+.social_graph__icon {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  text-align: start;
+  position: absolute;
+  left: 10px;
+}
+
+.social_graph__followers {
+  margin: auto;
+  text-align: center;
+}
+
+.social_graph_percent {
+  text-align: end;
+  position: absolute;
+  right: 10px;
+}
+
+.account_card {
+  position: relative;
+  border: 1px solid black;
+  height: 19vh;
+  padding: 10px;
+}
+
+.account_det {
+  position: absolute;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  top: 5px;
+  text-decoration: none;
+  font-size: 12px;
+  color: grey;
+}
+
+.account_details__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.account__profile img {
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 50px;
+}
+
+#account_management__search {
+  text-align: end;
+  position: absolute;
+  right: 50px;
+  top: 40px;
+}
+
+#account_management__search input {
+  border: none;
+  padding: 5px;
 }
 /*# sourceMappingURL=main.css.map */
