--- a/css/Project_management.css
+++ b/css/Project_management.css
@@ -41,7 +41,7 @@ main {
       grid-template-areas: 'aside'
  'main-overview'
  'footer';
-  height: 110rem;
+  height: 100vh;
 }
 
 body {
@@ -96,6 +96,12 @@ body {
   font-size: 1.5rem;
 }
 
+.aside__item a{
+  text-decoration: none;
+  display: flex;
+  color: #333;
+}
+
 .aside__item.active {
   background-color: #bbfce3;
   border-left: 6px solid #00be4c;
@@ -108,6 +114,7 @@ body {
 .aside__link {
   text-decoration: none;
   color: #333;
+  margin: 5px;
 }
 
 .icon {
