--- a/css/LancerPoint_project_information.css
+++ b/css/LancerPoint_project_information.css
@@ -670,4 +670,8 @@ margin-top: -10px;
 /* --Project Information CSS-- */
 /* //////////////////// */
 
-  
+@media only screen and (max-width: 758px){
+  html{
+    display: none;
+  }
+} 
