--- a/css/Account_management.css
+++ b/css/Account_management.css
@@ -25,6 +25,11 @@ html {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+          font-family: "Raleway", "segoe UI";
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777;
 }
 
 main {
@@ -437,7 +442,7 @@ body {
   border: 1px solid rgb(212, 210, 210);
   border-radius: 6px;
   font-weight: 100;
-  
+  height: 45rem;
 }
 
 .settings-container .accounts-details-container .details-container .details-list-container {
@@ -912,5 +917,11 @@ body {
     display: grid;
     grid-template-columns: 100% ;
     grid-gap: 2rem;
+  }
+}
+
+@media only screen and (max-width: 758px){
+  html{
+    display: none;
   }
 }
