--- a/css/Project_management.css
+++ b/css/Project_management.css
@@ -26,6 +26,7 @@ html {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  
 }
 
 main {
@@ -78,7 +79,7 @@ body {
 
 .aside {
   display: inline-block;
-  width: 32rem;
+  width: 25%;
   height: 100%;
   background: #fffffff4 !important;
 }
@@ -90,10 +91,10 @@ body {
 
 .aside__item {
   color: #333;
-  padding: 1.7rem;
+  padding: 1.6rem;
   border-left: 6px solid transparent;
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .aside__item a{
@@ -108,7 +109,7 @@ body {
 }
 
 .aside__icon {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
 }
 
 .aside__link {
@@ -1061,5 +1062,11 @@ body {
     border-left: 6px solid transparent;
     cursor: pointer;
     font-size: 1.1rem;
+  }
+}
+
+@media only screen and (max-width: 758px){
+  html{
+    display: none;
   }
 }
