--- a/css/main.css
+++ b/css/main.css
@@ -1737,3 +1737,8 @@ figcaption {
   padding: 5px;
 }
 /*# sourceMappingURL=main.css.map */
+@media only screen and (max-width: 758px){
+  html{
+    display: none;
+  }
+}
