--- a/css/setting.css
+++ b/css/setting.css
@@ -307,7 +307,7 @@ body {
 
 .settings-container{
     padding: 60px;
-    width: 80%;
+    width: 70%;
     height: 90rem;
     max-height: 90rem;
     float: right;
@@ -330,6 +330,7 @@ body {
   background-color: rgb(211, 236, 250);
   padding: 10rem;
   margin-bottom: 40px;
+  border-radius: 20px;
 }
 
 .settings-container .edit-profile-container a{
@@ -344,12 +345,13 @@ body {
 .settings-container .grid-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 40px;
+    grid-gap: 60px;
 }
 
 .settings-container .grid-container .grid-box{
   background-color: rgb(211, 236, 250);
-  padding: 100px;
+  padding: 50px;
+  border-radius: 20px;
 }
 
 .settings-container .grid-container .grid-box a{
@@ -400,4 +402,10 @@ body {
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 40px;
 }
+}
+
+@media only screen and (max-width: 758px){
+  html{
+    display: none;
+  }
 }
